2016-08-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* xfer-src/element-glue.c: Enable XFER_MECH_WRITEFD, XFER_MECH_MEM_RING
	  and XFER_MECH_WRITEFD, XFER_MECH_SHM_RING

2016-08-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/amrandom.pl: Fix perl warning

2016-08-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/ammessage.c: typo

2016-07-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/sendbackup.c: (childstr): check dumppid at last
	* client-src/sendbackup.c: (check_result):Increase the timeout to 600
	  seconds

2016-07-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Amdump.pm: Use POSIX::close
	* perl/Amanda/Chunker/Controller.pm, perl/Amanda/Chunker/Scribe.pm:
	  Improve error message
	* perl/Amanda/Config.swg: Add Message for code 1560000
	* perl/Amanda/Report.pm: Fix parsing of pid and fork L_INFO lines
	* perl/Amanda/Report/human.pm: Improve error message
	* perl/Amanda/Report/json.pm: Improve error message
	* perl/Amanda/Status.pm: Improve parsing
	* installcheck/Amanda_Rest_Runs.pl
	  installcheck/amstatus.pl
	  installcheck/chunker.pl
	  installcheck/pp-scripts.pl
	  installcheck/success-dumper-chunker+dumper-chunker-taper-flush.pl
	  installcheck/success-dumper-chunker+taper-flush.pl
	  installcheck/success-dumper-chunker-2taper-by-level.pl
	  installcheck/success-dumper-chunker-2taper.pl
	  installcheck/success-dumper-chunker-taper.pl
	  installcheck/success-dumper-taper.pl: Fix for changes

2016-07-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/dumper.c: Improve error reporting

2016-07-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Remove useless printf

2016-07-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/sendbackup.c: Read filter stderr and report them as error

2016-07-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/senddiscover.c: Do not include "pipespawn.h"
